seo, security fixes

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1489,6 +1489,7 @@ footer {
         font-weight: 300;
         line-height: 1.33em;
         text-transform: uppercase;
+        margin-bottom: 40rem;
     }
 }
 
